--- a/Section8/5.29 Return Type Overloading Resolution ~ Operator Notes.md
+++ b/Section8/5.29 Return Type Overloading Resolution ~ Operator Notes.md
@@ -2,6 +2,8 @@
 banner: images/image-2.png
 ---
 ### Return Type Overloading Resolution
+- Return Type Overloading Resolution이란, 함수나 연산자가 여러가지 반환유형을 가질 때, 어떤 반환 유형을 선택할지 결정하는 규칙을 말합니다. 
+- 아래 예제에서는 `float`타입 변수와 `int`타입 변수에 각각 다른값이 할당되는것을 보여줍니다.
 ```C++
 struct A {
 	operator float() {return 3.0f;}
@@ -17,24 +19,90 @@ int y = f();
 cout << x << "" << y;
 ```
 ### Increment and Decrement Operator
+- 증감연산자 `++`, `--`는 변수의 값을 한 단위씩 갱신하는 역할을 합니다.
+-  아래 예제에서는 struct A 에서 이 연산자들을 오버로딩하여사용하는 예시를 보여줍니다.
+- `operator++()`와 같은 방식으로 전위 증가 연산자를 정의할 수 있으며,
+- operator++(int a)와 같은 방식으로 후위 증가 연산자를 정의합니다. 
 ```C++
-struct A{
-int* ptr;
-int pos;
-A& operator++(){
-++ptr;
-++pos;
-return *this;
-}
 
-A operator++(int a){
-	A tmp = *this
-	++ptr;
-	++pos;
-	return tmp;
-	}
+struct A {
+    int* ptr;
+    int pos;
+
+    // 전위 증가 연산자
+    A& operator++() {
+        ++(*ptr);  // ptr이 가리키는 값 증가
+        ++pos;
+        return *this;
+    }
+
+    // 후위 증가 연산자
+    A operator++(int) {
+        A tmp = *this;  // 현재 객체의 복사본 생성
+        ++(*ptr);       // ptr이 가리키는 값 증가
+        ++pos;
+        return tmp;     // 복사본 반환
+    }
 };
+int main() {
+
+    A obj;
+    obj++;
+}
 ```
 ### Assignment Operator
+- 할당연산자 `=`는 다른 이미 존재하는 객체로 값을 복사하는데 사용됩니다.
+- 객체간의 값을 복사할 때 주로 사용합니다.
+```C++
+struct Array {
+    char* array;  // 문자열을 저장하는 배열
+    int size;     // 배열의 크기
+
+    // 생성자: 배열을 초기화하여 값으로 채움
+    Array(int size1, char value) : size{size1} {
+        array = new char[size];
+        std::fill(array, array + size, value);
+    }
+
+    // 소멸자: 동적으로 할당된 메모리 해제
+    ~Array() {
+        delete[] array;
+    }
+
+    // First Option
+    Array& operator=(const Array& x) {
+        if (this == &x)  // (1) 자기 할당을 방지하기위해 체크합니다
+        // 이는 자기자신을 복사하는 경우에 불필요한 작업을 막아줍니다. 
+            return *this;
+
+        delete[] array;  // (2) 기존 자원 해제
+        size = x.size;   // (3) 새로운 객체의 크기로 초기화
+        array = new char[size];  // (4) 새로운 배열 할당
+        std::copy(x.array, x.array + size, array);  // (5) 깊은 복사 수행
+        // std::copy(begin_source, end_source, destination(저장위치)) 
+
+        return *this;
+    }
+    // second option
+    Array& operator=(Array x){
+	    swap(*this, x);
+	    return *this;
+    }
+};
+
+```
+- **Assignment Operator `=`
+	- Swap 함수
+		- `friend`로 선언하여, 해당 구조체나 클래스의 private 맴버에 접근할 수 있습니다.
+		- std::swap의 사요으로 다양한타입에 대한 최적화된 swapping 기능을 제공합니다. 
+```C++
+friend void swap (A& x, A& y){
+using std::swap;
+swap(x.size, y.size);
+swap(x.array, y.array);
+}
+```
 ### Stream Operator
+- 스트림 연산자 `operator<<` 를 사용하여, 사용자 정의타입에 대해, 입력과 출력을 수행하는 함수를 오버로딩할 수 있습니다. 
+- 이 연산자를 사용자 정의 타입에 대해 오버로딩하여 객체를 출력할 때원하는 형식으로 포맷팅할 수 있습니다.
 ### Operator Notes
