--- a/Section8/5.31 Standard-Layout Class , POD, Hierarchy.md
+++ b/Section8/5.31 Standard-Layout Class , POD, Hierarchy.md
@@ -1,12 +1,19 @@
-### Standard-Layout Class
+### Standard-Layout Class(표준 레이아웃 타입 )
 - 메모리의 레이아웃이 C언어의 구조체나 유니온(union)과 동일한 클래스를 말합니다.
 - 이른 다른 언어와 상호운용에 유용합니다(interoperatability: useful for communication with other languages)
+- 메모리 레이아웃이 예측가능하다는 점을 가지고 있습니다. 즉 클래스의 크기, 멤버 변수의 오프셋, 패딩등이 컴파일 타임에 결정됩니다.
+	- 이러한 성질은  직렬화, 메모리 매핑, 네트워크 프토콜 구현 등 다양한 상황에서 유리합니다. 
 - 다음과 같은 조건을 만족해야합니다.
 	1. 가상 함수나 가상 기반 클래스가 없어야합니다.
 	2. 비정적 멤버, 기반클래스, 파생클래스에 대해 재귀적으로 standard-layout이어야 합니다.
 	3. 비정적 데이터 멤버에 대한 접근 지정자는 하나여야 합니다.
 	4. 첫번째 비정적 데이터 멤버와 같은 타입의 기반클래스가 있어야합니다.
-	5. 최
+	5. 가장 최근의 파생클래스에 비정적 데이터가 없어야 하며, 최대 하나의 기본 클래스만 비정적 데이터 멤버를 가질 수 있습니다. 
 ### POD (Plain Old Data)
 [what is POD?]([What are POD types in C++? - Stack Overflow](https://stackoverflow.com/questions/146452/what-are-pod-types-in-c))
+- C언어의 구조체와 유사한 데이터 구조를 나타내는 객체입니다.
+- 특별한 초기화나 소멸이 필요하지 않습니다.
+- POD는 표준레이아웃 타입과 트리비얼 타입라는 두가지 주요 속성을 만족해야합니다.
 ### Hierachy
+- Standard Layout, POD, Trivial Class, Trivial Copyable은 각각 다음과 같은 관계를 가집니다.
+![[Pasted image 20240626095637.png]]
