--- a/Section8/5.30. Aggregate, Trivial Class.md
+++ b/Section8/5.30. Aggregate, Trivial Class.md
@@ -50,8 +50,8 @@ int main() {
 
 ```
 ### Trivial Class
-- `memcpy` 와 같은 함수로, 메모리 복사를 지원하는 클래스입니다. 
-	- `memcpy`로 복사할때, 단순 데이터 구조체 처럼 동작하여, 효율적이고 안전하게 메모리를 다ㄹ 수 있습니다. 
+- `memcpy` 와 같은 함수를 통해 **메모리 복사를 지원**하는 클래스입니다. 
+	- `memcpy`로 복사할때, **단순 데이터 구조체 처럼** **동작**하여, 효율적이고 안전하게 메모리를 다룰 수 있습니다. 
 - 다음과 같은 조건을 만족해야합니다.
 	1. 사용자 정의 복사/이동/기본 생성자와 소멸자가 없어야 합니다.
 	2. 사용자 정의 복사,이동 할당 연산자가 없어야 합니다.
