--- a/Section9/6.03 Template Parameters - Default Value, Overloading, Specialization.md
+++ b/Section9/6.03 Template Parameters - Default Value, Overloading, Specialization.md
@@ -1,2 +1,140 @@
-- 6.03(~20/48) : Template Parameters - Default Value | Overloading | Specialization
+- #### 템플릿 파라미터의 기본값
+	- C++11 부터, 템플릿 파라미터는 기본값을 가질 수 있습니다. 이를 통해 템플릿 인스턴스화 시, 일부 또는 모든 파라미터에 대해 기본값을 사용할 수 있습니다.
+```C++
+template<int A = 3, int B = 4>
+void print1() {
+    std::cout << A << ", " << B << std::endl;
+}
 
+template<int A = 3, int B>
+void print2() {
+    std::cout << A << ", " << B << std::endl;
+}
+
+int main(){
+print1<2>();
+print1<>();
+}
+```
+
+```C++
+template<int A = 3, int B = 4>
+void print1() {
+    std::cout << A << ", " << B << std::endl;
+}
+
+template<int A = 3, int B>
+void print2() {
+    std::cout << A << ", " << B << std::endl;
+}
+
+int main() {
+    print1<>();
+    print1<2>();
+    //print2<2>();//B의 값이제공되지 않아서 컴파일 에러 발생
+}
+```
+
+- 템플릿의 파라미터는 이름이 없을 수 있습니다. 
+``` C++
+void f(){}
+template<typename = void>
+void g(){}
+int main(){
+g();
+}
+
+//사용예시-2
+template<typename T, typename = void>
+class Example {
+public:
+    void print() {
+        std::cout << "Type: " << typeid(T).name() << std::endl;
+    }
+};
+
+int main() {
+    Example<int> ex; // 두 번째 템플릿 파라미터는 기본값으로 void 사용
+    ex.print(); // 출력: Type: int
+    return 0;
+}
+
+```
+- C++11에서는 함수 파라터와 달리 템플릿 파라미터는 이전값으로 초기화 될 수 있습니다. 
+```C++
+template<int A, int B = A + 3> 
+void f(){
+std::cout << B << std::endl;
+}
+
+template<typename T, int S =sizeof(T)>
+void g(T){
+std::cout<<5<<std::endl;
+}
+```
+##### Template Overloading
+- 함수 템플릿은 오버로딩 될 수 있습니다.
+- 템플릿 파라미터를 추가하여 오버로딩 할수도 있습니다.
+```C++
+template<typename T>
+T add(T a, T b) {
+    return a + b;
+}
+
+// 파라미터의 수가 다른 오버로딩
+template<typename T>
+T add(T a, T b, T c) {
+    return a + b + c;
+}
+
+//파라미터 C를 추가하여 시그니쳐가 다르게 구성됩니다.
+template<int C, typename T> T add(T a, T b) { return a + b + C; } int main() { std::cout << add<5>(3, 4) << std::endl; // 출력: 12 (3 + 4 + 5)
+  return 0; }
+int main() {
+    std::cout << add(3, 4) << std::endl;    // 출력: 7
+    std::cout << add(3, 4, 5) << std::endl; // 출력: 12
+    return 0;
+}
+
+
+```
+#### Template Specialization
+- 템플릿 특수화란, 특정 타입 또는 값 조합에 대한 구체적인 구현을 제공하는 것을 의미합니다. 
+- 예를들어 부동 소수점의 경우, 직접적인 비교를 하는경우에 부동소수점 오차로인해 에러가 발생할 위험이 있기 때문입니다. 
+- 예를들어 다음과 같이 일반 템플릿을 특수화 할수 있습니다
+```C++
+template<typename T>
+bool compare(T a, T b) {
+    return a < b;
+}
+
+template<>
+bool compare<float>(float a, float b) {
+    return (std::fabs(a - b) < 1e-6); // 부동 소수점 비교를 위한 특수화된 구현
+}
+
+```
+- Full Specialization
+	- 모든 템플렛 인자가 특수화 될때, 함수템플릿은 완전특수화 될 수 있습니다.
+		- 여기서 완전이란 모든 파라미터를 특수화하는것을 말합니다.
+	- 이는 특정 타입 조합에 대해 완전히 특수화된 함수를 제공하는 것을 의미합니다. 
+```C++
+template<typename T>
+T max(T a, T b) {
+    return (a > b) ? a : b;
+}
+
+// int 타입에 대한 특수화
+template<>
+int max<int>(int a, int b) {
+    std::cout << "int 인자에 대한 특수" << std::endl;
+    return (a > b) ? a : b;
+}
+
+int main() {
+    std::cout << max(3, 5) << std::endl; // 출력: Specialized for int 5
+    std::cout << max(3.5, 2.5) << std::endl; // 출력: 3.5
+    return 0;
+}
+
+```
