--- a/Section9/6.04 Template Variable, Template Parameter Types.md
+++ b/Section9/6.04 Template Variable, Template Parameter Types.md
@@ -1,1 +1,51 @@
 
+- `C++14`는 변수는 템플릿으로 정의  된 변수를 허용하는 개념을 말합니다.
+- 템플릿 변수는 클래스 템플릿의 특수한 경우로 볼 수 있습니다.
+- 템플릿 변수를 사용함으로써, 동일한 변수를 사용하면서도 다양한 데이터 유형에 적응할 수 있게 합니다.
+- 예제코드
+	- `circular_area(int)`의 경우 형번환으로 인한 정보 손설(narrowing conversion)을 허용하지 않기에 오류를 발생시킵니다. 
+``` C++
+template<typename T>
+constexpr T pi(3.14159);
+
+template<typename T>
+T circular_area(T r){
+	return pi<T> * r * r; // 
+}
+
+circular_area(3.3f);
+circular_area(3.3); //double
+//circular_area(3); // compile error // narrowing conversion
+```
+예제코드 2
+- T 타입의 중력상수를 제공하여,  `free_fall_distance` 함수내에서 다양한 타입의 변수 `time`에 따라 자유낙하 거리를 계산 시, 해당 타입에 맞는 정밀도의 중력 상수를 사용할 수 있습니다. 
+```C++
+template<typename T>
+constexpr T gravity{ 9.80665 }; // 중력 상수 템플릿 변수
+
+template<typename T>
+T free_fall_distance(T time) {
+    return 0.5 * gravity<T> * time * time; // 중력 가속도를 이용한 자유 낙하 거리 계산
+}
+
+```
+
+#### Template Parameter Types
+- 템플릿 매개변수 유형은 다음과 같습니다. 함수나 클래스 정의 시, 그 타입이나 값을 컴파일 시에 결정할 수 있도록 해주는 강력한 도구입니다.
+- Integral type
+- Enum,enum class
+	- 타입 안정성을 보장한 의미있는이름
+- Floating-point type
+- **auto Placeholder `C++17`**
+	- `placeholder`란 C++에서 주로 템플릿 매개변수의 타입을 명시하지않고, 타입을 추론할 수 있는 용도로 사용됩니다.
+	- `auto` 키워드를 사용해 타입을 명시하지않고, 템플릿 인자를 정의할수 있습니다. 
+	- 즉 템플릿의인자를 자동으로 추론하게 합니다. 
+- **Class literals and concepts `C++20`**
+	- C++20부터 `concepts` 라는 다른형태의 placeholder가 도입되었습니다.
+	- 템플릿 코드에서 요구하는 타입의 요구사항을 명시적으로 정의할 수 있는 기능으로, 코드의 가독성과 안전성을 높입니다. 
+- Generic type typename
+상대적으로 덜 흔하게 사용되는 매개변수 유형은 다음과 같습니다.
+- function
+- reference / pointer to global static function or object
+- pointer to member type
+- nullptr_t(`C++14`)
