--- a/Section9/6.05 Compile-Time Utilities.md
+++ b/Section9/6.05 Compile-Time Utilities.md
@@ -1,1 +1,53 @@
 
+#### Compile-Time Utilities
+- 컴파일 타임 유틸리티인 `static_assert` `using` `decltype` 에 대해 자세한 설명은 아래와 같습니다
+#### `static_assert`( C++11)
+- 컴파일 시간에 소프트웨어의 assert 구문을 검사하는데 사용되는 C++ 도구입니다.
+- 이는 프로그램이 실행되기 전에 코드에 대한 조건과 제약을 검사할 수 있게 해줍니다. 
+- 다시말해, 컴파일 시간에 오류를 잡고 규칙을 강제 하는데 사용되며, 템플릿 인스턴스화 같은 타입 민감 작업에서 런타임 오류를 많이 줄일 수 있습니다.
+
+```C++
+static_assert(2+2 ==4,"테스트1"); // 조건이 참이므로 컴파일성공
+static_assert(2+2 ==5,"테스트2"); // 조건이 거짓이므로 컴파일 시간에 오류발생 
+static_assert(sizeof(void*)*8 == 64,"test3");
+```
+### `using` Keyword (C++11)
+- `using` 키워드는 `typedef`의 현대적이고 쉬운 대안으로, 타입별칭을 정의하는데 사용됩니다.
+```C++
+using distance_t = int; // typedef int distance_t;
+using fuction = void(*)(int,float); // typedef void (*function)(int,float)
+```
+- `using`은 템플릿과 결합하여 복잡한 템플릿 표현을 단순화 할 수 있습니다.
+```C++
+template<typename T, int Size>
+using Vector = std::array<T,Size>; 
+```
+- 부분/ 전체 특수화 별칭
+```C++
+using IntV4 = Vector<int, 4>;
+```
+
+### `decltype` 키워드(C++11)
+`decltype` (declared type의 약자) 키워드는 변수나 표현식의 타입을 캡쳐하는데 사용됩니다. `decltype`은 실제로 실행되지 않으며 항상 컴파일 타임에 평가됩니다. 
+```C++
+int x =3;
+decltype(x) d1;
+decltype(2+3.0) d2;
+decltype(x) d3 = x;
+decltype((x)) d4 = x;
+decltype(f) d5;
+```
+- 표현식에 괄호를 사용하는경우,`deltype` 은 변수의 타입을 참조타입으로 변환할 수 있습니다
+```C++
+decltype((x)) dx =x; //dx의 타입은 int&
+```
+- `decltype`을 사용하여, 템플릿 함수에서 반환타입을 자동으로 결정할 수  있습니다
+```C++
+template<typename T, typename R>
+auto add(T x, R y) -> decltype(x+y) {
+	return x + y;
+}
+
+unsigned v1 = add(1, 2u); // v1 타입은 unsigned
+double v2 = add(1.5, 2u);// v2 타입은 double
+```
