--- a/Section9/6.06 Type Traits Overview.md
+++ b/Section9/6.06 Type Traits Overview.md
@@ -1,3 +1,87 @@
 
-**Type Traits**
-- 6.06(~37/48) : Overview
+#### Type Traits 란
+- 타입 속성의 컴파일 시간에 Introspection과 refelction을 가능하게 하는 강력한 메커니즘을 제공합니다.
+- 이를 통해 개발자는 보다 견고하고 적응력 있는 코드를 작성할 수 있습니다.
+
+
+### Introspection
+ - 컴파일 타임 시간에 타입의 속성을 알아내는 능력(capacity)를 말합니다. 이는 타입의 특성을 파악하고 해당 정보를 바탕으로 코드를 조정할 수 있게 해줍니다.
+### Reflection
+- 컴퓨터 프로그램이 자신의 구조와 행동을 검사, introspection, 수정하는 능력을 말합니다.
+- C++에서는 컴파일 시간에 반성 및 내성검사 기능을 typetraits를 통해 제공합니다. 
+
+```C++
+template<typename T>
+T integral_div(T a, T b) {return a / b;}
+integral_div(7,2);
+intergral_div(7l,2l);
+integral_div(7.0,3.0); // 이 경우 부동 소수점 값은 정수타입이 아니게 되어 문제상황이 발생합니다.
+
+
+//위와 같은 문제상황 해결 예시 - 최선의 해결책
+#include <type_traits> // std 타입 트레이트 라이브러리 포함
+template<typename T>
+T integral_div(T a, T b) {
+    static_assert(std::is_integral<T>::value, "integral_div accepts only integral types");
+    return a / b;
+}
+
+
+//아래처럼 다양한 정수 타입에 대해 특수화하는 방법이 있습니다
+#include <iostream>
+
+// 함수 선언부 - 템플릿 함수
+template<typename T>
+T integral_div(T a, T b);
+
+// 특수화 - char 타입
+template<>
+char integral_div(char a, char b) {
+    return a / b;
+}
+
+// 특수화 - int 타입
+template<>
+int integral_div(int a, int b) {
+    return a / b;
+}
+
+// 특수화 - unsigned int 타입
+template<>
+unsigned int integral_div(unsigned int a, unsigned int b) {
+    return a / b;
+}
+
+// 특수화 - long 타입
+template<>
+long integral_div(long a, long b) {
+    return a / b;
+}
+
+// 특수화 - unsigned long 타입
+template<>
+unsigned long integral_div(unsigned long a, unsigned long b) {
+    return a / b;
+}
+
+int main() {
+    std::cout << "char: " << integral_div<char>(100, 3) << std::endl;
+    std::cout << "int: " << integral_div<int>(100, 3) << std::endl;
+    std::cout << "unsigned int: " << integral_div<unsigned int>(100, 3) << std::endl;
+    std::cout << "long: " << integral_div<long>(10000000000, 3) << std::endl;
+    std::cout << "unsigned long: " << integral_div<unsigned long>(10000000000, 3) << std::endl;
+    return 0;
+}
+
+```
+
+### Type Traits Library
+- `is_integral`: 정수 타입인지 확인합니다.
+- `is_floating_point`: 부동 소수점 타입인지 확인합니다.
+- `is_arithmetic`: 산술 타입(정수 또는 부동 소수점)인지 확인합니다.
+- `is_signed`: 부호 있는 타입인지 확인합니다.
+- `is_unsigned`: 부호 없는 타입인지 확인합니다.
+- `is_enum`: 열거 타입인지 확인합니다.
+- `is_void`: void 타입인지 확인합니다.
+- `is_pointer`: 포인터 타입인지 확인합니다.
+- `is_null_pointer`: nullptr 타입인지 확인합니다.
