--- a/Section9/6.07 Type Traits Library.md
+++ b/Section9/6.07 Type Traits Library.md
@@ -1,1 +1,32 @@
-- 6.07(~42/48) : Type Traits Library
+### Type Traits Library
+컴파일 시간에 타입정봐와 관계를 조회하는 강력한 도구를 제공합니다.
+기본 스칼라 유형 엔터티 유형, 클래스 특성, 타입관계에 관한 타입 트레이드를 설명하면 다음과같습니다. 
+
+### 기본 및 스칼라 타입 조회
+- `is_integral`: 정수 타입인지 확인합니다.
+- `is_floating_point`: 부동 소수점 타입인지 확인합니다.
+- `is_arithmetic`: 산술 타입(정수 또는 부동 소수점)인지 확인합니다.
+- `is_signed`: 부호 있는 타입인지 확인합니다.
+- `is_unsigned`: 부호 없는 타입인지 확인합니다.
+- `is_enum`: 열거 타입인지 확인합니다.
+- `is_void`: void 타입인지 확인합니다.
+- `is_pointer`: 포인터 타입인지 확인합니다.
+- `is_null_pointer`: nullptr 타입인지 확인합니다.
+### 엔터티 타입 조회
+
+- **is_reference**: T가 참조 타입(T&)인지 확인합니다.
+- **is_array**: T가 배열 타입(T(&)[N])인지 확인합니다.
+- **is_function**: T가 함수 타입인지 확인합니다.
+
+### 클래스 쿼리
+
+- **is_class**: T가 클래스 또는 구조체(struct) 타입인지 확인합니다.
+- **is_abstract**: T가 적어도 하나의 순수 가상 함수를 가진 추상 클래스인지 확인합니다.
+- **is_polymorphic**: T가 적어도 하나의 가상 함수를 포함한 클래스인지 확인합니다.
+
+### 타입 관계 조회
+
+- **is_const**: T가 const 타입인지 확인합니다.
+- **is_same<T, R>**: T와 R이 동일한 타입인지 확인합니다.
+- **is_base_of<T, R>**: T가 R의 기반 클래스인지 확인합니다.
+- **is_convertible<T, R>**: T 타입이 R 타입으로 변환될 수 있는지 확인합니다.
