--- a/Section9/6.08 Type Manipulation.md
+++ b/Section9/6.08 Type Manipulation.md
@@ -1,2 +1,25 @@
-- 6.08(~48/48) : Type Manipulation
-  
+C++에서 타입 트레이트를 사용한 타입 조작(Type Manipulation)은 프로그래밍적으로 타입의 속성을 변경할 수 있게 해주는 강력한 기능입니다. 이는 템플릿 프로그래밍에서 타입의 유연성이 제네릭 구성 요소의 설계와 기능에 큰 영향을 미칠 수 있기 때문에 특히 유용합니다. 여기에 타입 조작에 대한 개요와 그 사용 예를 설명합니다.
+
+### 타입 조작 개요
+
+타입 트레이트를 통해 타입을 조작하는 것은 주어진 타입에 대해 새로운 타입을 생성하거나 기존 타입의 특성을 변경할 수 있게 해줍니다. 예를 들어, 정수 타입에서 부호 없는 타입을 생성하거나, 포인터를 제거하는 등의 작업이 가능합니다.
+
+### 예제: 정수에서 부호 없는 타입 생성
+```C++ 
+#include <type_traits>
+using U = typename std::make_unsigned<int>::type; // 'typename'이 필요한 이유는 다음 강의에서 설명
+U y = 5; // unsigned
+```
+
+C++14에서는 타입 트레이트의 가독성을 향상시키기 위해 `std::make_unsigned_t<T>`와 같은 유틸리티를 제공합니다. 이는 `typename std::make_unsigned<T>::type`의 단순화된 형태입니다.
+
+### 타입 조작 라이브러리 - 부호 있는/부호 없는 타입, 포인터 및 참조
+
+- **make_signed**: 주어진 타입을 부호 있는 타입으로 만듭니다.
+- **make_unsigned**: 주어진 타입을 부호 없는 타입으로 만듭니다.
+- **remove_pointer**: 타입에서 포인터를 제거합니다 (예: T* → T).
+- **remove_reference**: 타입에서 참조를 제거합니다 (예: T& → T).
+- **add_pointer**: 주어진 타입에 포인터를 추가합니다 (예: T → T*).
+- **add_lvalue_reference**: 주어진 타입에 lvalue 참조를 추가합니다 (예: T → T&).
+
+이러한 타입 조작 기능을 사용함으로써, 템플릿 내에서 타입을 동적으로 변형시키고, 다양한 프로그래밍 요구사항에 맞춰 코드를 더 유연하게 작성할 수 있습니다. 타입의 속성을 조정하여 특정 상황에 맞는 타입을 생성하거나, 함수 오버로딩과 템플릿 특수화를 더 효과적으로 활용할 수 있습니다.
